--- a/packages/client/src/styles/theme.module.scss
+++ b/packages/client/src/styles/theme.module.scss
@@ -8,10 +8,10 @@ $inverted-text-color: $white;
 
 //typography
 $text-font: 400 1.2rem/1.5 $my-prettyfont;
-$tiny-font: 400 0.8rem/1.5 $my-prettyfont;
+$tiny-font: 600 0.7rem/1.5 $my-prettyfont;
 $heading-font: 600 2.5rem/1.3 $my-prettyfont;
 $small-heading-font: 600 1.4rem/1.5 $my-prettyfont;
-$logo-font: 600 1.2rem/1.5 $my-prettyfont;
+$logo-font: 800 1.15rem/1.5 $my-prettyfont;
 
 $header-height: 4rem;
 $mobile-width: 600px;
